# play_with_conan

./: CMakeLists.txt  LICENSE  README.md  azure-pipelines.yml  my_unit_test.cpp
.github/workflows/: conan-windows-build.yml
